manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customerapp
  namespace: customerapp
  labels:
    app: customerapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: customerapp
