manifest/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: customerapp
  namespace: customerapp
spec:
  host: customerapp.apps.ylgle0lxx7b45c61b7.canadacentral.aroapp.io
  to:
    kind: Service
    name: customerapp
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
